Change initialState redux, change code component

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -24,6 +24,9 @@
     }
     .model-chart {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
     }
   }
 }
