--- a/src/components/GridModel/GridModel.scss
+++ b/src/components/GridModel/GridModel.scss
@@ -1,6 +1,9 @@
 @use "ag-grid-community/styles" as ag;
 .model {
   height: 300px;
+  width: 100%;
+
+  margin-bottom: 50px;
   .ag-header {
     min-height: 40px !important;
     font-size: 14px;
